dist_man1_MANS=

if BUILD_WFLSCOIND
  dist_man1_MANS+=wflscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=wflscoin-qt.1
endif

if BUILD_WFLSCOIN_CLI
  dist_man1_MANS+=wflscoin-cli.1
endif

if BUILD_WFLSCOIN_TX
  dist_man1_MANS+=wflscoin-tx.1
endif

if BUILD_WFLSCOIN_UTIL
  dist_man1_MANS+=wflscoin-util.1
endif

if ENABLE_WALLET
if BUILD_WFLSCOIN_WALLET
  dist_man1_MANS+=wflscoin-wallet.1
endif
endif
